--- a/users/package.json
+++ b/users/package.json
@@ -17,7 +17,9 @@
     "@types/mysql": "^2.15.26",
     "@types/node": "^22.1.0",
     "amqplib": "^0.10.4",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.1.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
