Intergration of frontend-backend phase-II

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/posts/ {
+        location /api/tweets {
             proxy_pass http://tweets-service:3003;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -22,7 +22,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/follows/ {
+        location /api/follows {
             proxy_pass http://followers-service:3005;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
