--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
-JWT_KEY=muskansinghvi
+JWT_KEY=
 
-AWS_ACCESS_KEY_ID=AKIAYS2NWTRY6O6BJZ4G
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 
-MONGO_URI="mongodb+srv://jaysurya00:Jay%40surya2001@projectscluster.aykhspt.mongodb.net/?retryWrites=true&w=majority&appName=ProjectsCluster"
+MONGO_URI=
 
-NEO4J_URI="neo4j+s://4a289658.databases.neo4j.io"
-NEO4J_USERNAME="neo4j"
-NEO4J_PASSWORD="T3jg7pT-Gd0SYjzldToD_JVv9tPrv4pm-tME6l5y-JI"
-AURA_INSTANCEID="4a289658"
-AURA_INSTANCENAME="Instance01"
+NEO4J_URI=
+NEO4J_USERNAME=
+NEO4J_PASSWORD=
+AURA_INSTANCEID=
+AURA_INSTANCENAME=
 
-RABBITMQ_URI=amqp://jaysurya00:muskansinghvi@myrabbit:5672
+RABBITMQ_URI=
 
-REDIS_HOST=redis
-REDIS_PORT=6379
-REDIS_URI=redis://redis:6379
+REDIS_HOST=
+REDIS_PORT=
+REDIS_URI=
